--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.3.1
 Django==3.1.4
 django-colorfield==0.4.1
 django-countries==7.0
+django-crispy-forms==1.11.0
 Pillow==8.0.1
 pytz==2020.4
 sqlparse==0.4.1
