--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,6 @@ django-countries==7.0
 django-crispy-forms==1.11.0
 gunicorn==20.0.4
 Pillow==8.0.1
+psycopg2-binary==2.8.6
 pytz==2020.4
 sqlparse==0.4.1
-whitenoise==5.2.0
