--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Django==3.1.4
 django-colorfield==0.4.1
 django-countries==7.0
 django-crispy-forms==1.11.0
+django-storages==1.11.1
 gunicorn==20.0.4
 Pillow==8.0.1
 psycopg2-binary==2.8.6
