--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 asgiref==3.3.1
+boto3==1.17.12
+botocore==1.20.12
 dj-database-url==0.5.0
 Django==3.1.4
 django-colorfield==0.4.1
@@ -6,8 +8,10 @@ django-countries==7.0
 django-crispy-forms==1.11.0
 django-storages==1.11.1
 gunicorn==20.0.4
+jmespath==0.10.0
 Pillow==8.0.1
 psycopg2-binary==2.8.6
 pytz==2020.4
+s3transfer==0.3.4
 sqlparse==0.4.1
 whitenoise==5.2.0
