--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,34 @@
-asgiref==3.3.1
+asgiref==3.5.2
 boto3==1.17.12
 botocore==1.20.12
+certifi==2022.6.15
+cffi==1.15.1
+charset-normalizer==2.1.0
+cryptography==37.0.4
+defusedxml==0.7.1
 dj-database-url==0.5.0
-Django==3.1.4
+Django==4.0.6
+django-allauth==0.51.0
 django-colorfield==0.4.1
 django-countries==7.0
 django-crispy-forms==1.11.0
 django-storages==1.11.1
 gunicorn==20.0.4
+idna==3.3
 jmespath==0.10.0
-Pillow==8.0.1
-psycopg2-binary==2.8.6
+oauthlib==3.2.0
+Pillow==9.2.0
+psycopg2-binary==2.9.3
+pycparser==2.21
+PyJWT==2.4.0
+python-dateutil==2.8.2
+python3-openid==3.2.0
 pytz==2020.4
+requests==2.28.1
+requests-oauthlib==1.3.1
 s3transfer==0.3.4
-sqlparse==0.4.1
+six==1.16.0
+sqlparse==0.4.2
+tzdata==2022.1
+urllib3==1.26.10
 whitenoise==5.2.0
