--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ dj-database-url==0.5.0
 Django==4.0.6
 django-allauth==0.51.0
 django-colorfield==0.4.1
-django-countries==7.0
+django-countries==7.3.2
 django-crispy-forms==1.11.0
 django-storages==1.11.1
 gunicorn==20.0.4
@@ -29,6 +29,8 @@ requests-oauthlib==1.3.1
 s3transfer==0.3.4
 six==1.16.0
 sqlparse==0.4.2
+stripe==3.5.0
+typing_extensions==4.3.0
 tzdata==2022.1
 urllib3==1.26.10
 whitenoise==5.2.0
